# vespa-ragblueprint

./: .gitignore  CHANGES.md  Dockerfile  Makefile  README-original.md  README.md  SCREENSHOT_GUIDE.md  compose.yml  fix_ports.sh  process_docs_cloud.sh  pyproject.toml  pytest.ini  reset_all.sh  run_nyrag.ps1  run_nyrag.sh  run_nyrag_local.sh  run_vespa_local.sh  start_local.sh  stop_nyrag.sh  test_output.txt  web_example.yml
blog/: README copy.md  README copy2.md  README.copy.bak.md  README.md
config/: doc_example.yml  web_example.yml
dataset/: Vespa.ai Proof of Concept (POC) Doc.docx
docs/: FIX_CUDA_DEVICE.md  FIX_ILLEGAL_CHARACTERS.md  FIX_RANK_PROFILE.md  FIX_SCHEMA_MISMATCH.md  FIX_VESPA_QUERY_API.md  IMPLEMENTATION_SUMMARY.md  RUNNING_LOCALLY.md  VESPA_APP_USAGE.md
output/doc/: conf.yml  data.jsonl
src/nyrag/: __init__.py  api.py  cli.py  config.py  defaults.py  deploy.py  feed.py  logger.py  process.py  schema.py  utils.py  vespa_cli.py  vespa_docker.py
src/nyrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nyrag/crawly/: __init__.py  crawly.py  user_agents.py
src/nyrag/examples/: __init__.py  doc.yml  web.yml
src/nyrag/static/: chat.css  chat.js
src/nyrag/templates/: chat.html
src/nyrag/tests/: README.md  __init__.py  test_config.py  test_crawly.py  test_deploy.py  test_feed.py  test_logger.py  test_process.py  test_schema.py  test_utils.py  test_vespa_cli.py  test_vespa_docker.py
vespa_cloud/: services.xml
vespa_local/: services.xml
